Trying to fix image overlap on some browsers

--- a/src/sections/desktop/section2-text-img-scrolling/section2.css
+++ b/src/sections/desktop/section2-text-img-scrolling/section2.css
@@ -18,3 +18,8 @@
 .desktop-container .section2-1 .img-container {
   height: 435px;
 }
+
+.desktop-container .section2-1 .img-container > div {
+  width: 604px;
+  height: 435px;
+}
